# wg21-paperlint

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
output-sd4-v2-smoke/: README.md
output-sd4-v2-smoke/N5035/: review.md
output-sd4-v2-smoke/P2929R2/: review.md
output-sd4-v2-smoke/P3642R4/: review.md
output-sd4-v2-smoke/P3874R1/: review.md
output-sd4-v2-smoke/P4026R0/: review.md
output-sd4-v4/: index.json
output-sd4-v4/N5035/: 2-gate.json  evaluation.json  meta.json
output-sd4-v4/N5036/: 1-findings.json  2-gate.json  evaluation.json  meta.json
output-sd4-v4/N5037/: 1-findings.json  2-gate.json  evaluation.json  meta.json
output-sd4-v4/P0876R22/: 1-findings.json  2-gate.json  evaluation.json  meta.json
output-sd4-v4/P2000R5/: 2-gate.json  evaluation.json  meta.json
output-sd4-v4/P2285R1/: 2-gate.json  evaluation.json  meta.json
output-sd4-v4/P2583R0/: 2-gate.json  evaluation.json  meta.json
output-sd4-v4/P2728R11/: 1-findings.json  2-gate.json  evaluation.json  meta.json
output-sd4-v4/P2929R2/: 1-findings.json  2-gate.json  evaluation.json  meta.json
output-sd4-v4/P2953R4/: 1-findings.json  2-gate.json  evaluation.json  meta.json
output-sd4-v4/P2964R2/: 1-findings.json  2-gate.json  evaluation.json  meta.json  review.md
output-sd4-v4/P3045R7/: 1-findings.json  2-gate.json  evaluation.json  meta.json
output-sd4-v4/P3181R1/: 1-findings.json  2-gate.json  evaluation.json  meta.json
output-sd4-v4/P3385R7/: 1-findings.json  2-gate.json  evaluation.json  meta.json
output-sd4-v4/P3411R5/: 1-findings.json  2-gate.json  evaluation.json  meta.json  review.md
output-sd4-v4/P3440R2/: 1-findings.json  2-gate.json  evaluation.json  meta.json  review.md
output-sd4-v4/P3596R0/: 2-gate.json  evaluation.json  meta.json
output-sd4-v4/P3642R4/: 1-findings.json  2-gate.json  evaluation.json  meta.json
output-sd4-v4/P3666R3/: 1-findings.json  2-gate.json  evaluation.json  (+1 more)
paperlint/: __main__.py  credentials.py  extract.py  llm.py  logutil.py  mailing.py  models.py  orchestrator.py  pipeline.py  rubric.md  storage.py  suppress.py
review-preview/: P0876R22.md  P2953R4.md  P3045R7.md  P3385R7.md  P3816R2.md  P3822R1.md  P3864R1.md  P3899R1.md  P3941R2.md  P3969R0.md  P3971R0.md  P3978R2.md  P4003R0.md  P4032R0.md
tests/: conftest.py  test_discovery_multipass.py  test_extract.py  test_metadata_contract.py  test_models.py  test_orchestrator_failures.py  test_paperlint_extract.py  test_quote_verify.py  test_step_discovery_resilient.py  test_storage.py  test_suppress.py
tomd/: __init__.py  main.py  requirements.txt
(+280 files in other folders)
