[project]
name = "paperlint"
version = "0.1.0"
description = "WG21 C++ standards paper evaluation pipeline"
requires-python = ">=3.12"
license = {text = "BSL-1.0"}
authors = [{name = "Sergio DuBois", email = "sentientsergio@gmail.com"}]

dependencies = [
    "openai",
    "python-dotenv",
    "beautifulsoup4~=4.14.0",
    "requests",
    "pymupdf~=1.27.0",
    "mistune~=3.2.0",
]

[project.optional-dependencies]
test = [
    "pytest~=8.0",
]

[project.scripts]
paperlint = "paperlint.__main__:main"
tomd = "tomd.main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["paperlint*", "tomd*"]

[tool.pytest.ini_options]
# Repo-root on sys.path so `import tomd` works when `pytest` is invoked from
# any working directory.
pythonpath = ["."]
